--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
